--- a/Domasna3/spring-backend/src/main/resources/application-prod.properties
+++ b/Domasna3/spring-backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/accommodations
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=postgres
 
 
 ## default connection pool
