added docker images and compose file for containerization

--- a/Domasna3 and 4/spring-backend/src/main/resources/application-prod.properties
+++ b/Domasna3 and 4/spring-backend/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/accommodations
+spring.datasource.url=jdbc:postgresql://springboot-postgresql:5432/accommodations
 spring.datasource.username=postgres
 spring.datasource.password=password
 
