modified files for deployment

--- a/Domasna3 and 4/docker-compose.yml
+++ b/Domasna3 and 4/docker-compose.yml
@@ -11,7 +11,9 @@ services:
       - "8080:8080" # Forward the exposed port 8080 on the container to port 8080 on the host machine
     #restart: always
     environment: # Pass environment variables to the service
-      spring.profiles.active: prod
+      DB_URL: jdbc:postgresql://db:5432/accommodations
+      DB_USERNAME: postgres
+      DB_PASSWORD: password
     networks: # Networks to join (Services on the same network can communicate with each other using their name)
       - accommodations
     depends_on:
