--- a/Domasna3 and 4/spring-backend/src/main/resources/application-prod.properties
+++ b/Domasna3 and 4/spring-backend/src/main/resources/application-prod.properties
@@ -1,7 +1,11 @@
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://springboot-postgresql:5432/accommodations
-spring.datasource.username=postgres
-spring.datasource.password=password
+#spring.datasource.url=jdbc:postgresql://springboot-postgresql:5432/accommodations
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 
 ## default connection pool
